# parkfornightgooglemaps

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  README.md  claude.md  package-lock.json  package.json  render.yaml  update_render.py  wrangler.toml
.crew/audit/: prune.jsonl
.crew/state/metrics/: 2026-05-29.jsonl  2026-05-30.jsonl
.github/workflows/: ci.yml  cloudflare-deploy.yml  deploy.yml  supabase-deploy.yml
client/: .env.example  .gitignore  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
client/src/: App.tsx  AuthCallback.tsx  axiosConfig.ts  main.tsx  types.ts  vite-env.d.ts
client/src/components/: FilterModal.tsx  ListView.tsx  MapContainer.tsx  PlaceDetails.tsx  ReviewForm.tsx  (+1 more)
scripts/: DATA-SAFETY.md  PIPELINE_DESIGN.md  PIPELINE_PLAN.md  PIPELINE_REQUIREMENTS.md  upload-images-and-update-exports.py  upload-images-to-firestore.py  upload-to-r2.js
scripts/data/: places_export.json  reviews_export.json
scripts/normalize/: normalize.py  pyproject.toml
scripts/pipeline/: ARCHITECTURE.md  CACHE_POLICY.md  IDEMPOTENCY-PLAN.md  OPTIMIZATION_PLAN.md  PIPELINE_ARCHITECTURE.md  PIPELINE_AUDIT.md  PIPELINE_DESIGN.md  PIPELINE_DESIGN_V2.md  PIPELINE_REVIEW.md  REFACTOR_PLAN.md  REVIEW_FINDINGS.md  REVIEW_FINDINGS_V2.md  SINGLE-RESPONSIBILITY-AUDIT.md  __init__.py  api_client.py  cache.py  cache_config.py  checkpoint.py  cleanup_r2.py  config.py  convert_jpg_to_webp.py  convert_local_images.py  ctranslate2_engine.py  db_worker.py  image_downloader.py  logging_setup.py  normalizer.py  pipeline.py  pyproject.toml  r2_uploader.py  r2_worker.py  stages.py  supabase_uploader.py  translation_server.py  translator.py
scripts/scraper/: README.md  __init__.py  api.py  checkpoint.py  config.py  images.py  pyproject.toml  run.py  scraper.py
scripts/shared/: progress.py
scripts/upload/: pyproject.toml  r2-config.json.example  upload.py
server/: .env.example  eslint.config.mjs  package-lock.json  package.json
server/prisma/: schema.prisma
server/scripts/: build.sh
server/src/: index.js
server/tests/: auth.test.js  favoriteController.test.js  health.test.js  hybridFetching.test.js  lruCache.test.js  placeController.test.js  reviewController.test.js  setup.js  visitController.test.js
supabase/: config.toml
supabase/.temp/: linked-project.json  pooler-url  project-ref
supabase/functions/: deno.json
supabase/migrations/: 001_supabase_auth.sql
worker/: index.ts  package-lock.json  package.json
(+54 files in other folders)
