[project]
name = "park4night-normalize"
version = "1.0.0"
description = "Normalise scraped Park4Night data into clean tables with English translations"
requires-python = ">=3.12"
dependencies = [
    "rich>=13.0.0",
    "deep-translator>=1.11.0",
]

[project.scripts]
normalize = "normalize:main"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[dependency-groups]
dev = []
