[project]
name = "park4night-pipeline"
version = "1.0.0"
description = "Unified Park4Night ETL pipeline: scrape, normalize, translate, upload"
requires-python = ">=3.12"
dependencies = [
  "requests>=2.31.0",
  "rich>=13.0.0",
  "argostranslate>=1.0.0",
  "boto3>=1.34.0",
  "psycopg2-binary>=2.9.0",
  "python-dotenv>=1.0.0",
  "Pillow>=10.0.0",
  "diskcache>=1.0.0",
  "fastapi>=0.136.3",
  "uvicorn>=0.48.0",
]

[project.scripts]
pipeline = "pipeline.pipeline:main"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.isort]
known-first-party = [
  "api_client",
  "config",
  "db_worker",
  "image_downloader",
  "logging_setup",
  "normalizer",
  "r2_worker",
  "translator",
]

[tool.ty.environment]
python-version = "3.12"

[dependency-groups]
dev = ["ty>=0.0.39"]
